--- a/AromaRestaurant/Web.config
+++ b/AromaRestaurant/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="AromaConnection" connectionString="data source=aroma.database.windows.net;initial catalog=AromaRestaurant;persist security info=True;user id=aroma;password=restaurant@1;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="AromaConnection" connectionString="Data Source=aromarestaurant.database.windows.net;Initial Catalog=aroma;Persist Security Info=True;User ID=aroma;Password=restaurant@1;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=aromarestaurant.database.windows.net;Initial Catalog=aroma;Persist Security Info=True;User ID=aroma;Password=restaurant@1;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
